# pilecap

./: .copier-answers.yml  .coveragerc  .gitignore  Makefile  README.md  constraints.txt  init_env.sh  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: pypackage.yml
constraints/: 3.10-a5f890a1.txt  3.7-df96aca1.txt  global.txt  shared.txt
src/pilecap/: __init__.py  __main__.py
tests/: test_padstone.py  test_pilecap.py
tests/test_pilecap/: constraints.txt
tests/test_pilecap/project/: Makefile  constraints.txt  pyproject.toml  setup.cfg
tests/test_pilecap/project/constraints/: global.txt
