[metadata]
name = pilecap
version = attr: pilecap._version.version
description = A stable foundation for reproducible builds
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers = Programming Language :: Python :: 3

[options]
install_requires =
    build
    pep517
package_dir=
    =src

[options.entry_points]
console_scripts =
    pilecap = pilecap.__main__:main

[options.extras_require]
cli = fire >=0.4

[options.packages.find]
where = src

[options.package_data]
pilecap = py.typed
