[metadata]
name = padstone
version = attr: padstone._version.version
description = A stable foundation for reproducible tests
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = Private :: Do not upload to PyPI

[options]
install_requires =
    more-itertools
package_dir=
    =src

[options.entry_points]
console_scripts =
    padstone = padstone.__main__:main

[options.packages.find]
where = src

[options.package_data]
padstone = py.typed
